--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Navbar</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href= 
-"//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.min.css" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <style>
         *{
             padding: 0px;
@@ -97,6 +95,8 @@
             }
             .bar{
             display: block;
+            color: black;
+            border: 1px solid;
         }
         .hide{
             padding: 7px;
@@ -115,7 +115,7 @@
                 <li><a href="#" class="m">Home</a></li>
                 <li><a href="#" class="m">About</a></li>
                 <li><a href="#" class="m">Contact</a></li>
-                <li class="bar"><a href="#"  onclick="fun()"><i class="fi-list"></i></a></li>
+                <li class="bar"><a href="#" onclick="fun()"><i class="bi-justify"></i></a></li>
             </ul>
     
             <ul class="hide" id="hide">
