--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
             .left i{
                 font-size: 20px;
             }
+            .bar{
+            display: block;
+        }
             .m{
                 display: none;
             }
